# "src/util/ChangeLog"

2005-12-22	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-72-prsim-00-05:
	  Added visitee class template.  
	  Added offset_array array wrapper template. 


2005-12-15	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-72-prsim-00-04:
	  Added "using clear" to util::memory::index_pool for 
		en masse deallocation.  


2005-12-14	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-72-prsim-00-03:
	  Created util/memory/index_pool.h which is an adapter to turn
		any vector-like container into an index-based allocator.  
	  Wrote util/memory/free_list adapter helper function to
		use any of several standard containers as free-list, 
		primarily use for memory-management.  


2005-12-13	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-72-prsim-00-02:
	  Added "util/string.h" to configure-wrap around string.h, strings.h
		and cstring, and provide some handy inline functions
		in the util::string namespace.  
	  util/readline_wrap.cc: configure dependencies on some readline
		prototypes' (const-incorrect) argument types.  
	  util/readline.h: configure-wrapped inclusion of the proper
		readline header.  


2005-12-12	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-72-merged-rename-00-06:
	  Merge from rename-00 branch.  
	  Some comments updated.  


2005-12-09	David Fang		<fangism@users.sourceforge.net>

	* ARTXX-00-01-04-main-00-71:
	  Library additions:
		enhanced excl_ptr and count_ptr families of pointer classes
		to be able to define new classes with different delete
		policies (e.g. array [], malloc).
		This is accomplished by making the original header file
		template-able, via preprocessing magic.  
		Added a few basic tests for these new pointer classes.  
	  Added util/readline_wrap.{h,cc}, configured readline header
		providing a consistent (limited) common interface.  
		Since read line are malloc-allocated, we use an